--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio</title>
+    <link rel="shortcut icon" href="assets/icon/curriculum-vitae.png" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <section>
+        <header>
 
-    </header>
-    <main>
+        </header>
+        <footer>
 
-    </main>
-    <footer>
-        
-    </footer>
+        </footer>
+    </section>
+    <section>
+        <main>
+
+        </main>    
+    </section>
 </body>
 </html>
