se puso un fondo al body y se creo un contenedor para una imagen

--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Portafolio</title>
     <link rel="shortcut icon" href="assets/icon/curriculum-vitae.png" type="image/x-icon">
 </head>
 <body>
-    <section>
+    <div>
         <header>
-
+            <div class="img">
+                <img src="assets/img/foto.png" alt="">
+            </div>
         </header>
         <footer>
 
         </footer>
-    </section>
-    <section>
+    </div>
+    <div>
         <main>
 
         </main>    
-    </section>
+    </div>
 </body>
 </html>
