se creo un contenedor vacio y otro para el texto

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
             <div class="img">
                 <img src="assets/img/foto.png" alt="">
             </div>
+            <div class="conteiner-title">
+                <div class="none">
+                    <br>
+                </div>
+                <div class="title">
+                    <h1>SANTIAGO</h1>
+                    <h2>GONZALEZ BELTRAN</h2>
+                    <hr>
+                </div>
+            </div>
         </header>
         <footer>
 
