se creo un contenedor para el segundo titulo y una section para la informacion

--- a/index.html
+++ b/index.html
@@ -24,14 +24,19 @@
                 </div>
             </div>
         </header>
+        <div class="conteiner-title-2">
+            <div class="title-2">
+                <h2>Tecnico en desarrollo de software</h2>
+            </div>
+        </div>
+        <main>
+            <section class="information">
+            
+            </section>
+        </main> 
         <footer>
 
-        </footer>
-    </div>
-    <div>
-        <main>
-
-        </main>    
+        </footer>   
     </div>
 </body>
 </html>
