se creo un contenedor para la introduccion

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
         </div>
         <main>
             <section class="information">
-            
+                <div class="Introduction">
+                    <p>
+                        Soy una persona dedicada y apasionada por el desarrollo de software, 
+                        siempre en busca de oportunidades para crecer y mejorar mis habilidades.
+                        Mi compromiso con la mejora continua y mi entusiasmo por el mundo de 
+                        la tecnología me impulsan a estar al tanto de las últimas tendencias y
+                        prácticas en el campo del desarrollo web y de software.
+                    </p>
+                </div>
             </section>
         </main> 
         <footer>
