--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 </div>
                 <div class="education">
                     <div class="title-education">
-                        <h3>EDUCACIÓN</h3>
+                        <h3>EDUCACIÓN.</h3>
                     </div>
                     <div class="education-1">
-                        <p>educación basica secundaria </p>
+                        <p class="negrilla">Educación basica secundaria. </p>
                         <p>Egresado - Roman Maria Valencia, 2023</p>
                     </div>
                     <div class="education-2">
-                        <p>Sena - Técnico</p>
+                        <p class="negrilla">Sena - Técnico.</p>
                         <p>Egresado - Roman Maria Valencia con un titulo en desarrollo de software - 2023</p>
                     </div>
                 </div>
