se creo una section para los proyectos y un div para el titulo 3

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Soy una persona dedicada y apasionada por el desarrollo de software, 
                         siempre en busca de oportunidades para crecer y mejorar mis habilidades.
                         Mi compromiso con la mejora continua y mi entusiasmo por el mundo de 
-                        la tecnología me impulsan a estar al tanto de las últimas tendencias y
+                        la tecnología me impulsan a estar al tanto de las últimas tendencias ya español
                         prácticas en el campo del desarrollo web y de software.
                     </p>
                 </div>
@@ -52,6 +52,22 @@
                         <p class="negrilla">Sena - Técnico.</p>
                         <p>Egresado - Roman Maria Valencia con un titulo en desarrollo de software - 2023</p>
                     </div>
+                </div>
+            </section>
+            <div class="conteiner-title-2">
+                <div class="title-3">
+                    <h2>PROYECTOS</h2>
+                </div>
+            </div>
+            <section class="Projects">
+                <div class="Projects-1">
+
+                </div>
+                <div class="Projects-2">
+
+                </div>
+                <div class="Projects-3">
+
                 </div>
             </section>
         </main> 
