avance final de la clase 2

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <div class="Projects-1">
                     <div class="conteiner-project-1">
                         <div class="info-projects">
+                            <h3>Travel</h3>
                             <p>afafae</p>
                         </div>
                         <div class="img-projects-1">
@@ -77,6 +78,7 @@
                             <img src="assets/img/logo.webp" alt="">
                         </div>
                         <div class="info-projects">
+                            <h3>Atlas</h3>
                             <p>afafae</p>
                         </div>
                     </div>
@@ -84,6 +86,7 @@
                 <div class="Projects-3">
                     <div class="conteiner-project-3">
                         <div class="info-projects">
+                            <h3>Libreria</h3>
                             <p>afafae</p>
                         </div>
                         <div class="img-projects-3">
