se termino de dar estilos a la seccion de proyectos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </p>
                 </div>
                 <div class="education">
-                    <div class="title-education">
+                    <div>
                         <h3>EDUCACIÓN.</h3>
                     </div>
                     <div class="education-1">
@@ -65,7 +65,7 @@
                     <div class="conteiner-project-1">
                         <div class="info-projects">
                             <h3>Travel</h3>
-                            <p>afafae</p>
+                            <p>Una web de viajea a destinos de colombia</p>
                         </div>
                         <div class="img-projects-1">
                             <img src="assets/img/logo (1).png" alt="">
@@ -79,7 +79,7 @@
                         </div>
                         <div class="info-projects">
                             <h3>Atlas</h3>
-                            <p>afafae</p>
+                            <p>Una web dedicada a proteger tu sitio web</p>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                     <div class="conteiner-project-3">
                         <div class="info-projects">
                             <h3>Libreria</h3>
-                            <p>afafae</p>
+                            <p>una aplicacion que te servira para guardar la informacion de tus libros </p>
                         </div>
                         <div class="img-projects-3">
                             <img src="assets/img/libros.png" alt="">
