--- a/index.html
+++ b/index.html
@@ -95,6 +95,37 @@
                     </div>
                 </div>
             </section>
+            <section class="technical-skills">
+                <div class="conteiner-title-4">
+                    <div class="title-4">
+                        <h3>HABILIDADES TECNICAS.</h3>
+                    </div>
+                </div>
+                
+                    <div class="conteiner-technical-skills">
+                        <div class="img-technical-skills">
+                            <img src="assets/img/html-5.png" alt="">
+                        </div>
+                        <div class="img-technical-skills">
+                            <img src="assets/img/css-3.png" alt="">
+                        </div>
+                        <div class="img-technical-skills">
+                            <img src="assets/img/js.png" alt="">
+                        </div>
+                        <div class="img-technical-skills">
+                            <img src="assets/img/piton.png" alt="">
+                        </div>
+                        <div class="img-technical-skills">
+                            <img src="assets/img/php.png" alt="">
+                        </div>
+                        <div class="img-technical-skills">
+                            <img src="assets/img/mysql.png" alt="">
+                        </div>
+                        <div class="img-technical-skills">
+                            <img src="assets/img/git.png" alt="">
+                        </div>
+                    </div>
+            </section>
         </main> 
         <footer>
 
