se le dio estilo a la seccion de references

--- a/index.html
+++ b/index.html
@@ -126,6 +126,20 @@
                         </div>
                     </div>
             </section>
+            <section class="references">
+                <div class="conteiner-references">
+                    <div>
+                        <div class="conteiner-title-5">
+                            <div class="title-5">
+                                <h3>REFERENCIAS.</h3>
+                            </div>
+                        </div>
+                        <p>ingeniera de sistemas con enfasis en software</p>
+                        <p>+57 3168241253</p>
+                        <p>Liliana Maria Pineda</p>
+                    </div>
+                </div>
+            </section>
         </main> 
         <footer>
 
