se maqueto el footer usando html y css

--- a/index.html
+++ b/index.html
@@ -139,10 +139,20 @@
                         <p>Liliana Maria Pineda</p>
                     </div>
                 </div>
+                <div class="conteiner-none">
+                    <div class="none-2">
+                        <br>
+                    </div>
+                </div>
             </section>
         </main> 
         <footer>
-
+            <h3>CONTACTO.</h3>
+            <ul>
+                <li><img src="assets/icon/github.png" alt="">   Github/SAntiGB05</li>
+                <li><img src="assets/icon/social.png" alt="">317 418 6529</li>
+                <li><img src="assets/icon/gmail.png" alt="">santigbttobi@gmail.com</li>
+            </ul>
         </footer>   
     </div>
 </body>
