se puso un progress en la seccion de las skills y se le dio estilo con css

--- a/index.html
+++ b/index.html
@@ -105,24 +105,31 @@
                     <div class="conteiner-technical-skills">
                         <div class="img-technical-skills">
                             <img src="assets/img/html-5.png" alt="">
+                            <progress class="progress" value="50" max="100"></progress>
                         </div>
                         <div class="img-technical-skills">
                             <img src="assets/img/css-3.png" alt="">
+                            <progress class="progress" value="50" max="100"></progress>
                         </div>
                         <div class="img-technical-skills">
                             <img src="assets/img/js.png" alt="">
+                            <progress class="progress" value="50" max="100"></progress>
                         </div>
                         <div class="img-technical-skills">
                             <img src="assets/img/piton.png" alt="">
+                            <progress class="progress" value="50" max="100"></progress>
                         </div>
                         <div class="img-technical-skills">
                             <img src="assets/img/php.png" alt="">
+                            <progress class="progress" value="50" max="100"></progress>
                         </div>
                         <div class="img-technical-skills">
                             <img src="assets/img/mysql.png" alt="">
+                            <progress class="progress" value="50" max="100"></progress>
                         </div>
                         <div class="img-technical-skills">
                             <img src="assets/img/git.png" alt="">
+                            <progress class="progress" value="50" max="100"></progress>
                         </div>
                     </div>
             </section>
