se utilizaron las media query para cambiar el estilo

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 <h3>REFERENCIAS.</h3>
                             </div>
                         </div>
-                        <p>ingeniera de sistemas con enfasis en software</p>
+                        <p>Ingeniera de sistemas con enfasis en software</p>
                         <p>+57 3168241253</p>
                         <p>Liliana Maria Pineda</p>
                     </div>
