se realizo las media query para las pantallas mas grandes

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                         <div class="info-projects">
                             <h3>Travel</h3>
                             <p>Una web de viajea a destinos de colombia</p>
+                            <a href="https://github.com/SAntiGB05/taller-rozo">Ver</a>
                         </div>
                         <div class="img-projects-1">
                             <img src="assets/img/logo (1).png" alt="">
@@ -80,6 +81,7 @@
                         <div class="info-projects">
                             <h3>Atlas</h3>
                             <p>Una web dedicada a proteger tu sitio web</p>
+                            <a href="https://github.com/SAntiGB05/atlas">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -88,6 +90,7 @@
                         <div class="info-projects">
                             <h3>Libreria</h3>
                             <p>una aplicacion que te servira para guardar la informacion de tus libros </p>
+                            <a href="https://github.com/SAntiGB05/-libreria-array">Ver</a>
                         </div>
                         <div class="img-projects-3">
                             <img src="assets/img/libros.png" alt="">
