se cambio los links de los proyectos}

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="info-projects">
                             <h3>Travel</h3>
                             <p>Una web de viajea a destinos de colombia</p>
-                            <a href="https://github.com/SAntiGB05/taller-rozo">Ver</a>
+                            <a href="https://taller-rozo.vercel.app/">Ver</a>
                         </div>
                         <div class="img-projects-1">
                             <img src="assets/img/logo (1).png" alt="">
@@ -81,7 +81,7 @@
                         <div class="info-projects">
                             <h3>Atlas</h3>
                             <p>Una web dedicada a proteger tu sitio web</p>
-                            <a href="https://github.com/SAntiGB05/atlas">Ver</a>
+                            <a href="https://atlas-ten-beta.vercel.app/">Ver</a>
                         </div>
                     </div>
                 </div>
